--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata|Roboto+Mono&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="./assets/js/main.js"></script>
-  <script src="./assets/js/web-components/index.js"></script>
-  <link rel="icon" type="image/png" href="assets//images/JR.png">
+  <script src="./js/main.js"></script>
+  <script src="./js/web-components/index.js"></script>
+  <link rel="icon" type="image/png" href="images/JR.png">
   <title>Jon Rose</title>
 </head>
 
@@ -26,7 +26,7 @@
     </div>
   </section>
   <section id="about-me">
-    <img id="me" src="./assets/images/me.png" alt="bitmoji image of me" />
+    <img id="me" src="./images/me.png" alt="bitmoji image of me" />
     <h1>My name is Jon Rose and I am passionate about writing performant and elegant code. Whether it's for a static
       website, highly interactive web apps, or even an iOS app, I love working on it all.</h1>
   </section>
@@ -76,7 +76,7 @@
         </ul>
       </div>
       <div>
-        <img id="computer" src="assets/images/dual-screen-1745705.svg" alt="illustration of computer">
+        <img id="computer" src="images/dual-screen-1745705.svg" alt="illustration of computer">
       </div>
     </div>
     <div class="scroll iconWrapper" href="#contact">
@@ -87,11 +87,11 @@
     <h1 class="heading">Let's Sync Up</h1>
     <h2>I'm always looking for new and exciting challenges</h2>
     <div id="contactLinks">
-      <a href="https://www.linkedin.com/in/jonathan-rose-dev/" target="_blank"><img src="./assets/images/linkedin.png"
+      <a href="https://www.linkedin.com/in/jonathan-rose-dev/" target="_blank"><img src=".//images/linkedin.png"
           alt="linkedIn"></a>
-      <a href="https://www.github.com/summaro400ex" target="_blank"><img src="./assets/images/github.png"
+      <a href="https://www.github.com/summaro400ex" target="_blank"><img src=".//images/github.png"
           alt="github"></a>
-      <a href="mailto:jon@jonrose.dev"><img src="./assets/images/email.png" alt="email"></a>
+      <a href="mailto:jon@jonrose.dev"><img src="./images/email.png" alt="email"></a>
     </div>
     <div id="resumeWrapper">
       <h2>Check out my resume</h2>
@@ -102,7 +102,7 @@
       </a>
     </div>
     <div id="bye">
-      <img src="./assets/images/bye.png" alt="bye">
+      <img src="./images/bye.png" alt="bye">
     </div>
   </section>
   <div id="credit">
