Add excalmation point to greeting

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <section id="landing">
     <div id="intro">
       <h1>Hello,</h1>
-      <h1>I'm Jon</h1>
+      <h1>I'm Jon!</h1>
     </div>
     <terminal-emulator></terminal-emulator>
     <div class="scroll iconWrapper" href="#me">
