Add excalmation point to greeting
Add more excitement

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <section id="landing">
     <div id="intro">
       <h1>Hello,</h1>
-      <h1>I'm Jon</h1>
+      <h1>I'm Jon!</h1>
     </div>
     <terminal-emulator></terminal-emulator>
     <div class="scroll iconWrapper" href="#me">
@@ -28,7 +28,7 @@
   <section id="about-me">
     <img id="me" src="./images/me.png" alt="bitmoji image of me" />
     <h1>My name is Jon Rose and I am passionate about writing performant and elegant code. Whether it's for a static
-      website, highly interactive web apps, or even an iOS app, I love working on it all.</h1>
+      website, highly interactive web apps, or even an iOS app, I love working on it all!</h1>
   </section>
   <section id="currentWork">
     <h1 class="heading">What I'm Up To</h1>
